# drf_course

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_duration.py  0003_alter_habit_options.py
users/: models.py  permissions.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_t_chat_id.py
